fix ul list won't align with image vertically
- remove li left margin (the cause)
- use gap instead

--- a/style.css
+++ b/style.css
@@ -11,15 +11,12 @@ body {
     list-style-type: none;
     margin-top: 0px;
     display: flex;
+    gap: 20px;
 }
 
 .logo {
     font-size: 24px;
     color: #F9FAF8;
-}
-
-.top .header ul li {
-    margin: 0 30px 0 0 ;
 }
 
 .top .header ul li a {
